--- a/src/index.jade
+++ b/src/index.jade
@@ -1,15 +1,18 @@
 !!! 5
-html
+html(ng-app="myApp")
   head
     title Thinkful Multiplication Tables Title
     link(href="http://cdnjs.cloudflare.com/ajax/libs/foundation/5.3.1/css/foundation.min.css", rel="stylesheet")
     link(href="css/styles.css", rel="stylesheet")
 
   body
-    table(ng-controller="MultiplicationCtrl")
-      tr(ng-repeat="numberA in numbers")
-        td(ng-repeat="numberB in numbers")
-          {{ numberA * numberB }}
+    .row
+      .columns
+        h1 I Can Multiply!
+        table(ng-controller="MultiplicationCtrl")
+          tr(ng-repeat="numberA in numbers")
+            td(ng-repeat="numberB in numbers")
+              {{ numberA * numberB }}
 
     script(src="http://code.jquery.com/jquery-2.0.3.min.js")
     script(src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.21/angular.min.js")
